<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vimeo</string>    
    <!-- notifications -->
    <string name="no_iternet_connection">No connection. Please enable Internet connection</string>
    <string name="vimeo_not_reachable">Connection exists, but Vimeo site is not reachable... Please fix the problem</string>
    <string name="no_pages_more">Maximum number of pages is reached</string>
    <string name="please_do_not_touch">Don\'t mess with me!</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_item">Unknown item</string>
    <string name="caching_video">Loading video...</string>    
    <string name="currently_not_supported">This action is not supported currently</string>
    <string name="no_space_for_video_cache">There is no free space to make cache of this file. Required: %1$dKB | Actual: %2$dKB </string>
    <string name="failed_to_get_video_stream">Failed to get video stream (No mobile version of video)</string>
    <!-- main menu -->
    <string name="refresh">Refresh</string>
    <string name="preferences">Preferences</string>
    <string name="switch_to_gallery">Switch view (to Gallery)</string>
    <string name="switch_to_list">Switch view (to List)</string>    
    <!-- lists -->
    <string name="load_more">Load more...</string>
    <string name="loading">Loading...</string>
    <string name="no_items_in_list">No items</string>
    <!-- context menus -->
    <string name="context_menu">Context menu</string>
    <string name="video_is">Video %s</string>
    <string name="view_video_info">View info</string>
    <string name="view_author_info">View author info</string>
    <string name="view_channel_info">View info</string>    
    <string name="view_album_info">View info</string>
    <string name="view_author_videos">View videos by author</string>
    <string name="view_channel_videos">View videos in channel</string>
    <string name="view_album_videos">View videos in album</string>
    <!-- actions groups -->
    <string name="operations">Operations</string>
    <string name="information">Information</string>
    <string name="statistics">Statistics</string>
    <!-- welcome page -->
    <string name="enter">Enter</string>
    <string name="guest">Guest</string>
    <!-- quick actions -->
    <string name="qa_later">Later</string>
    <string name="qa_info">Info</string>
    <string name="qa_author">Author</string>
    <string name="qa_comments">Comments</string>    
    <!-- lactions/qactions lines -->
    <string name="watch_later">Watch later</string>    
    <string name="failed_to_modify_watch_later">Failed to modify Watch Later album</string>
    <string name="added_to_watchlater">Added to Watch later</string>
    <string name="removed_from_watchlater">Removed from Watch Later</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="disliked">Disliked</string>
    <string name="failed_to_change_like">Failed to change like</string>    
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="mutual">Mutual</string>
    <string name="not_mutual">Not mutual</string>
    <string name="failed_to_subscribe">Failed to subscribe</string>
    <string name="failed_to_perform">Failed to perform</string>
    <string name="subscribe_likes">Subscribe likes</string>
    <string name="subscribe_uploads">Subscribe uploads</string>
    <string name="subscribe_appearences">Subscribe appearances</string>
    <string name="add_contact">Add contact</string>
    <string name="remove_contact">Remove contact</string>
    <string name="added_contact">Added contact</string>
    <string name="removed_contact">Removed contact</string>
    <!-- video page -->
    <plurals name="num_of_plays">
        <item quantity="one">%d play</item>
        <item quantity="other">%d plays</item>
    </plurals>
    <plurals name="num_of_likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="num_of_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="uploaded_by">%s</string>
    <string name="uploaded_on">%s</string>
    <string name="none_of_tags">[none]</string>
    <string name="tags_are">%s</string>
    <string name="dimensions_are">%1$dx%2$d</string>
    <string name="duration_is">%s</string>    
    <string name="no_description_supplied">[No description supplied]</string>    
    <!-- user page -->
    <plurals name="num_of_videos">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="num_of_albums_unknown">\? videos</string>
    <plurals name="num_of_albums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <string name="num_of_channels_unknown">\? channels</string>
    <plurals name="num_of_channels">
        <item quantity="one">%d channel</item>
        <item quantity="other">%d channels</item>
    </plurals>
    <plurals name="num_of_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="num_of_appearances">
        <item quantity="one">Appears in %d video</item>
        <item quantity="other">Appears in %d videos</item>
    </plurals>
    <string name="user_from_staff">Staff member</string>
    <string name="user_is_plus_member">Plus member</string>
    <string name="subscriptions">Subscriptions</string>    
    <string name="location_is">%s</string>
    <string name="created_on">%s</string>    
    <string name="no_biography_supplied">[No biography supplied]</string>    
    <!-- channel page -->
    <plurals name="num_of_subscribers">
        <item quantity="one">%d subscriber</item>
        <item quantity="other">%d subscribers</item>
    </plurals>
    <string name="created_by">%s</string>
    <!-- album page -->
    <string name="updated_on">%s</string>
    <!-- users page -->
    <string name="staff_caps">STAFF</string>
    <string name="plus_caps">PLUS</string>
    <string name="mutual_caps">MUTUAL</string>    
</resources>
