<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menuGroup_VideoContext">
        <item android:id="@+id/menu_viewInfo"
             android:orderInCategory="3"
             android:alphabeticShortcut="i"
             android:numericShortcut="3"             
             android:title="@string/view_channel_info"
             android:icon="@drawable/info" />
        <item android:id="@+id/menu_viewAuthorInfo"
             android:orderInCategory="4"
             android:alphabeticShortcut="a"
             android:numericShortcut="4"
             android:title="@string/view_author_info"
             android:icon="@drawable/contact" />
        <item android:id="@+id/menu_viewChannelVideos"
             android:orderInCategory="4"
             android:alphabeticShortcut="a"
             android:numericShortcut="4"
             android:title="@string/view_channel_videos"
             android:icon="@drawable/video" />                     
    </group>
</menu>
