<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menuGroup_Main">
        <item android:id="@+id/menu_Refresh"        
             android:orderInCategory="1"
             android:alphabeticShortcut="r"
             android:numericShortcut="1"             
             android:title="@string/refresh"
             android:icon="@drawable/refresh_menu" />             
        <item android:id="@+id/menu_Preferences"       
             android:orderInCategory="2"
             android:alphabeticShortcut="p"
             android:numericShortcut="2"             
             android:title="@string/preferences"
             android:icon="@drawable/settings_menu" />
        <item android:id="@+id/menu_SwitchView"
             android:orderInCategory="3"
             android:alphabeticShortcut="s"
             android:numericShortcut="3"             
             android:title="@string/switch_to_gallery"
             android:icon="@drawable/gallery_menu"
             android:titleCondensed="Switch view"/>
    </group>
</menu>
